--- a/test_lib/Makefile
+++ b/test_lib/Makefile
@@ -1,15 +1,16 @@
 CC	= gcc
 CFLAGS	= -O2 -Wall
-#CFLAGS	= 
-LIBS    = -lm -lcfitsio -lfftw3 -lgsl -lgslcblas -lglafic -L..
-#LIBS	= -lm /usr/local/lib/libcfitsio.a /usr/local/lib/libfftw3.a /usr/local/lib/libgsl.a /usr/local/lib/libgslcblas.a -lcurl
+#LIBS    = -L.. -lglafic -lcfitsio -lfftw3 -lgsl -lgslcblas -lm
+LIBS    = -L.. -lglafic /usr/local/lib/libcfitsio.a /usr/local/lib/libfftw3.a /usr/local/lib/libgsl.a /usr/local/lib/libgslcblas.a -lm
 TARGET	= test
 OBJS	= test.o
 
 CFLAGS2 = -static
 
 ifeq ($(HOSTTYPE),intel-mac)
-	CFLAGS2 = 
+	CFLAGS2 = -lcurl
+else
+        CFLAGS2 = 
 endif
 
 $(TARGET): $(OBJS)
